--- a/python_bascis.ipynb
+++ b/python_bascis.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,191 @@
     "del a\n",
     "\n",
     "# 使用pass来表示什么都不做，直接跳过这一段。\n",
-    "pass\n"
+    "pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# docstring文档字符串，放在函数开头，作为函数的一部分存储起来的函数说明。\n",
+    "def square(x):\n",
+    "    'calculate the square of the number x'\n",
+    "    return x*x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'calculate the square of the number x'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 查看函数的文档字符串。\n",
+    "square.__doc__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 (2, 3, 4, 5) 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 函数的参数列表中可以使用*param来收集一个参数元组，也可以使用**param来收集一个关键字参数。前者返回一个元组，后者返回一个字典。\n",
+    "# *param不会收集关键字参数，函数所需要的关键字参数必须明确指定。\n",
+    "def in_the_middle(x, *y, z):\n",
+    "    print(x, y, z)\n",
+    "in_the_middle(1, 2, 3, 4, 5, z=7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'x': 1, 'y': 2, 'z': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_params_3(**params):\n",
+    "    print(params)\n",
+    "print_params_3(x=1, y=2, z=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n",
+      "(5, 6, 7)\n",
+      "{'foo': 1, 'bar': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_params_4(x, y, z=3, *pospar, **keypar):\n",
+    "    print(x, y, z)\n",
+    "    print(pospar)\n",
+    "    print(keypar)\n",
+    "\n",
+    "print_params_4(1, 2, 3, 5, 6, 7, foo=1, bar=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 使用递归方法实现幂的计算\n",
+    "def power(x,n):\n",
+    "    'return the value of x^n^'\n",
+    "    if n==0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return x*power(x,n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "power(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 使用递归方法实现二分查找\n",
+    "def search(seq, number, lower=0, upper=None):\n",
+    "    '在给定序列中查找指定数字，返回这个数字对应的坐标，或者不包含这个数字'\n",
+    "    if upper == None:\n",
+    "        upper = len(seq)-1\n",
+    "    if lower == upper:\n",
+    "        assert seq[upper] == number\n",
+    "        return upper\n",
+    "    else:\n",
+    "        middle = (lower + upper)//2\n",
+    "        if number > seq[middle]:\n",
+    "            return search(seq, number, middle+1, upper)\n",
+    "        else:\n",
+    "            return search(seq, number, lower, middle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 8, 34, 67, 95, 100, 123]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seq = [34, 67, 8, 123, 4, 100, 95]\n",
+    "seq.sort()\n",
+    "print(seq)\n",
+    "search(seq,34)"
    ]
   }
  ],
