--- a/python_bascis.ipynb
+++ b/python_bascis.ipynb
@@ -437,6 +437,82 @@
     "print(seq)\n",
     "search(seq,34)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# abstract class\n",
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class Talker(ABC):\n",
+    "    @abstractmethod\n",
+    "    def talk(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Can't instantiate abstract class Talker with abstract method talk",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\Documents\\Coding\\python_bascis.ipynb Cell 23'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/Coding/python_bascis.ipynb#ch0000022?line=0'>1</a>\u001b[0m Talker()\n",
+      "\u001b[1;31mTypeError\u001b[0m: Can't instantiate abstract class Talker with abstract method talk"
+     ]
+    }
+   ],
+   "source": [
+    "# 抽象类不能实例化，只用来为一系列子类实现一些抽象方法。\n",
+    "Talker()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 创建一个类继承Talker，重写抽象方法talk()。\n",
+    "class Knigget(Talker):\n",
+    "    def talk(self):\n",
+    "        print(\"Ni!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "Ni!\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = Knigget()\n",
+    "print(isinstance(k,Talker))\n",
+    "k.talk()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
