class and model

--- a/python_bascis.ipynb
+++ b/python_bascis.ipynb
@@ -509,10 +509,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 在一个模块中除了包含需要的函数方法，还应该包含简单的测试。\n",
+    "# 使用if语句判断当前调用模块的程序是否为主程序，如果是则运行测试。\n",
+    "# hello.py\n",
+    "def hello():\n",
+    "    print(\"hello world!\")\n",
+    "\n",
+    "def test():\n",
+    "    hello()\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['d:\\\\Documents\\\\Coding',\n",
+      " 'C:\\\\Program '\n",
+      " 'Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.10_3.10.1264.0_x64__qbz5n2kfra8p0\\\\python310.zip',\n",
+      " 'C:\\\\Program '\n",
+      " 'Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.10_3.10.1264.0_x64__qbz5n2kfra8p0\\\\DLLs',\n",
+      " 'C:\\\\Program '\n",
+      " 'Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.10_3.10.1264.0_x64__qbz5n2kfra8p0\\\\lib',\n",
+      " 'C:\\\\Users\\\\gongp\\\\AppData\\\\Local\\\\Microsoft\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0',\n",
+      " '',\n",
+      " 'C:\\\\Users\\\\gongp\\\\AppData\\\\Local\\\\Packages\\\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\\\LocalCache\\\\local-packages\\\\Python310\\\\site-packages',\n",
+      " 'C:\\\\Users\\\\gongp\\\\AppData\\\\Local\\\\Packages\\\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\\\LocalCache\\\\local-packages\\\\Python310\\\\site-packages\\\\win32',\n",
+      " 'C:\\\\Users\\\\gongp\\\\AppData\\\\Local\\\\Packages\\\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\\\LocalCache\\\\local-packages\\\\Python310\\\\site-packages\\\\win32\\\\lib',\n",
+      " 'C:\\\\Users\\\\gongp\\\\AppData\\\\Local\\\\Packages\\\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\\\LocalCache\\\\local-packages\\\\Python310\\\\site-packages\\\\Pythonwin',\n",
+      " 'C:\\\\Program '\n",
+      " 'Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.10_3.10.1264.0_x64__qbz5n2kfra8p0',\n",
+      " 'C:\\\\Program '\n",
+      " 'Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.10_3.10.1264.0_x64__qbz5n2kfra8p0\\\\lib\\\\site-packages']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys, pprint\n",
+    "pprint.pprint(sys.path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Error', 'copy', 'deepcopy', 'dispatch_table', 'error']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import copy\n",
+    "\n",
+    "[n for n in dir(copy) if not n.startswith('_')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Error', 'copy', 'deepcopy']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "copy.__all__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function copy in module copy:\n",
+      "\n",
+      "copy(x)\n",
+      "    Shallow copy operation on arbitrary Python objects.\n",
+      "    \n",
+      "    See the module's __doc__ string for more info.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(copy.copy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('range(stop) -> range object\\n'\n",
+      " 'range(start, stop[, step]) -> range object\\n'\n",
+      " '\\n'\n",
+      " 'Return an object that produces a sequence of integers from start '\n",
+      " '(inclusive)\\n'\n",
+      " 'to stop (exclusive) by step.  range(i, j) produces i, i+1, i+2, ..., j-1.\\n'\n",
+      " 'start defaults to 0, and stop is omitted!  range(4) produces 0, 1, 2, 3.\\n'\n",
+      " 'These are exactly the valid indices for a list of 4 elements.\\n'\n",
+      " 'When step is given, it specifies the increment (or decrement).')\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint.pprint(range.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Program Files\\\\WindowsApps\\\\PythonSoftwareFoundation.Python.3.10_3.10.1264.0_x64__qbz5n2kfra8p0\\\\lib\\\\copy.py'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt = copy.__file__\n",
+    "dt"
+   ]
   }
  ],
  "metadata": {
