--- a/python_bascis.ipynb
+++ b/python_bascis.ipynb
@@ -678,6 +678,184 @@
     "dt = copy.__file__\n",
     "dt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import webbrowser\n",
+    "webbrowser.open('http://www.python.org')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from heapq import *\n",
+    "from random import shuffle\n",
+    "data = list(range(10))\n",
+    "shuffle(data)\n",
+    "heap = []\n",
+    "for n in data:\n",
+    "    heappush(heap,n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 6, 3, 5, 4, 8, 7, 9]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0.5, 0.5, 6, 1, 2, 4, 8, 7, 9, 3, 5]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heappush(heap, 0.5)\n",
+    "heap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heappop(heap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Tue May 31 17:01:53 2022'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from time import *\n",
+    "asctime()\n",
+    "sleep(6)\n",
+    "asctime()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "random.uniform(0,360)\n",
+    "random.randrange(0,20,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['King of clubs',\n",
+      " '2 of clubs',\n",
+      " 'Queen of clubs',\n",
+      " 'Jack of clubs',\n",
+      " 'King of spades',\n",
+      " 'Queen of hearts',\n",
+      " '2 of diamonds',\n",
+      " '9 of spades',\n",
+      " '6 of diamonds',\n",
+      " '10 of hearts',\n",
+      " '1 of clubs',\n",
+      " '1 of diamonds']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pprint, random\n",
+    "values = list(range(1, 11)) + 'Jack Queen King'.split()\n",
+    "suits = 'diamonds clubs hearts spades'.split()\n",
+    "deck = ['{} of {}'.format(v, s) for v in values for s in suits]\n",
+    "\n",
+    "# from random import shuffle\n",
+    "random.shuffle(deck)\n",
+    "pprint.pprint(deck[:12])\n",
+    "# while deck: input(deck.pop())"
+   ]
   }
  ],
  "metadata": {
