--- a/RL_with_gym_1.ipynb
+++ b/RL_with_gym_1.ipynb
@@ -1,92 +1,111 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%pip install gym"
+    "# OpenAI - Gym API 指南\n",
+    "*from Gym Documentation*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 初始化环境\n",
+    "首先需要安装 gym package，可以通过 pip 或者 conda 等完成。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: gym in c:\\users\\gongp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (0.19.0)\n",
+      "Requirement already satisfied: numpy>=1.18.0 in c:\\users\\gongp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (1.22.4)\n",
+      "Requirement already satisfied: cloudpickle<1.7.0,>=1.2.0 in c:\\users\\gongp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (1.6.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 22.0.4; however, version 22.1.2 is available.\n",
+      "You should consider upgrading via the 'C:\\Users\\gongp\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
    "source": [
-    "import gym\n",
-    "\n",
-    "env = gym.make('MountainCar-v0')"
+    "# %pip install gym\n",
+    "import gym"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "调用gym.make()函数，传入一个现存的环境名，可以返回一个该环境的实例。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Observation and action space \n",
-    "obs_space = env.observation_space\n",
-    "action_space = env.action_space\n",
-    "print(\"The observation space: {}\".format(obs_space))\n",
-    "print(\"The action space: {}\".format(action_space))"
+    "env = gym.make(\"MountainCar-v0\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Discrete(3)\n"
+     ]
+    }
+   ],
    "source": [
-    "%pip install matplotlib"
+    "print(env.action_space)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32md:\\Documents\\Coding\\RL_with_gym_1.ipynb Cell 7'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000013?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000013?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtf\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000013?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow_probability\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtfp\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000013?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorlayer\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtl\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
    "source": [
-    "import matplotlib.pyplot as plt \n",
-    "#from matplotlib import pyplot as plt\n",
-    "# reset the environment and see the initial observation\n",
-    "obs = env.reset()\n",
-    "print(\"The initial observation is {}\".format(obs))\n",
-    "\n",
-    "# Sample a random action from the entire action space\n",
-    "random_action = env.action_space.sample()\n",
-    "\n",
-    "# # Take the action and get the new observation space\n",
-    "new_obs, reward, done, info = env.step(random_action)\n",
-    "print(\"The new observation is {}\".format(new_obs))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install gym[classic_control]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env.render(mode = \"human\")"
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "import tensorflow_probability as tfp\n",
+    "import tensorlayer as tl"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "731ae9408b834e8e304ebf7b909e3292a44b8c9a9f2094ed2d7c7223cd151636"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit (windows store)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -100,9 +119,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "90ae384ec8aa6644af31da6e68cfa043ca5e4f959255e106df86226e1926c12a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
