--- a/RL_with_gym_1.ipynb
+++ b/RL_with_gym_1.ipynb
@@ -18,31 +18,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: gym in c:\\users\\gongp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (0.19.0)\n",
-      "Requirement already satisfied: numpy>=1.18.0 in c:\\users\\gongp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (1.22.4)\n",
-      "Requirement already satisfied: cloudpickle<1.7.0,>=1.2.0 in c:\\users\\gongp\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (1.6.0)\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: gym in d:\\programs\\anaconda\\lib\\site-packages (0.21.0)\n",
+      "Requirement already satisfied: cloudpickle>=1.2.0 in d:\\programs\\anaconda\\lib\\site-packages (from gym) (2.0.0)\n",
+      "Requirement already satisfied: numpy>=1.18.0 in d:\\programs\\anaconda\\lib\\site-packages (from gym) (1.21.5)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 22.0.4; however, version 22.1.2 is available.\n",
-      "You should consider upgrading via the 'C:\\Users\\gongp\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip' command.\n"
      ]
     }
    ],
    "source": [
-    "# %pip install gym\n",
-    "import gym"
+    "%pip install gym"
    ]
   },
   {
@@ -54,52 +46,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = gym.make(\"MountainCar-v0\")"
+    "import numpy as np\n",
+    "from ray.rllib.env.multi_agent_env import MultiAgentEnv\n",
+    "\n",
+    "from gym import spaces\n",
+    "from gym.spaces import Box"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_multi_agent(env_name_or_creator):\n",
+    "    \"\"\"Convenience wrapper for any single-agent env to be converted into MA.\n",
+    "    Agent IDs are int numbers starting from 0 (first agent).\n",
+    "    Args:\n",
+    "        env_name_or_creator (Union[str, Callable[]]: String specifier or\n",
+    "            env_maker function.\n",
+    "    Returns:\n",
+    "        Type[MultiAgentEnv]: New MultiAgentEnv class to be used as env.\n",
+    "            The constructor takes a config dict with `num_agents` key\n",
+    "            (default=1). The reset of the config dict will be passed on to the\n",
+    "            underlying single-agent env's constructor.\n",
+    "    Examples:\n",
+    "         # >>> # By gym string:\n",
+    "         # >>> ma_cartpole_cls = make_multi_agent(\"CartPole-v0\")\n",
+    "         # >>> # Create a 2 agent multi-agent cartpole.\n",
+    "         # >>> ma_cartpole = ma_cartpole_cls({\"num_agents\": 2})\n",
+    "         # >>> obs = ma_cartpole.reset()\n",
+    "         # >>> print(obs)\n",
+    "         # ... {0: [...], 1: [...]}\n",
+    "         # >>> # By env-maker callable:\n",
+    "         # >>> ma_stateless_cartpole_cls = make_multi_agent(\n",
+    "         # ...    lambda config: StatelessCartPole(config))\n",
+    "         # >>> # Create a 2 agent multi-agent stateless cartpole.\n",
+    "         # >>> ma_stateless_cartpole = ma_stateless_cartpole_cls(\n",
+    "         # ...    {\"num_agents\": 2})\n",
+    "    \"\"\"\n",
+    "\n",
+    "    class MultiEnv(MultiAgentEnv):\n",
+    "        def __init__(self, config):\n",
+    "            super().__init__()\n",
+    "            self.env = env_name_or_creator(config)\n",
+    "            obs = self.env.observation_space\n",
+    "            self.observation_space = {i: spaces.Tuple((obs[0], Box(obs[1].low[0], obs[1].high[0], shape=(1,),\n",
+    "                                                                   dtype=np.int64), obs[2])) for i in range(self.env.number_agents)}\n",
+    "\n",
+    "            self.action_space = self.env.action_space\n",
+    "\n",
+    "        def reset(self):\n",
+    "            obs_state = self.env.reset()\n",
+    "            agents_state = obs_state[1]\n",
+    "            return {i: (obs_state[0], np.array([agents_state[i]]), np.array(obs_state[2])) for i in range(self.env.number_agents)}\n",
+    "\n",
+    "        def step(self, action_dict):\n",
+    "            obs, rew, dones, info = {}, {}, {}, {}\n",
+    "            action_list = []\n",
+    "            for i, action in action_dict.items():\n",
+    "                action_list.append(action)\n",
+    "            joint_obs_np, joint_reward_np, done, _ = self.env.step(action_list)\n",
+    "            agents_state = joint_obs_np[1]\n",
+    "            dones[\"__all__\"] = done\n",
+    "            rew = {i: joint_reward_np for i in range(self.env.number_agents)}\n",
+    "            obs = {i: (joint_obs_np[0], np.array([agents_state[i]]), np.array(joint_obs_np[2])) for i in range(self.env.number_agents)}\n",
+    "            return obs, rew, dones, info\n",
+    "\n",
+    "    return MultiEnv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Discrete(3)\n"
+      "Box([-4.8000002e+00 -3.4028235e+38 -4.1887903e-01 -3.4028235e+38], [4.8000002e+00 3.4028235e+38 4.1887903e-01 3.4028235e+38], (4,), float32)\n"
      ]
     }
    ],
    "source": [
-    "print(env.action_space)"
+    "env = gym.make(\"CartPole-v0\")\n",
+    "obs = env.observation_space\n",
+    "print(obs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow'",
+     "ename": "TypeError",
+     "evalue": "'str' object is not callable",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32md:\\Documents\\Coding\\RL_with_gym_1.ipynb Cell 7'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000013?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000013?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtf\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000013?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow_probability\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtfp\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000013?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorlayer\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtl\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\Documents\\Coding\\RL_with_gym_1.ipynb Cell 8'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000007?line=0'>1</a>\u001b[0m ma_cartpole_cls \u001b[39m=\u001b[39m make_multi_agent(\u001b[39m\"\u001b[39m\u001b[39mCartPole-v0\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000007?line=1'>2</a>\u001b[0m ma_cartpole \u001b[39m=\u001b[39m ma_cartpole_cls(config\u001b[39m=\u001b[39;49m{\u001b[39m\"\u001b[39;49m\u001b[39mnum_agents\u001b[39;49m\u001b[39m\"\u001b[39;49m: \u001b[39m2\u001b[39;49m})\n",
+      "\u001b[1;32md:\\Documents\\Coding\\RL_with_gym_1.ipynb Cell 6'\u001b[0m in \u001b[0;36mmake_multi_agent.<locals>.MultiEnv.__init__\u001b[1;34m(self, config)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000005?line=28'>29</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, config):\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000005?line=29'>30</a>\u001b[0m     \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000005?line=30'>31</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv \u001b[39m=\u001b[39m env_name_or_creator(config)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000005?line=31'>32</a>\u001b[0m     obs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv\u001b[39m.\u001b[39mobservation_space\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000005?line=32'>33</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobservation_space \u001b[39m=\u001b[39m {i: spaces\u001b[39m.\u001b[39mTuple((obs[\u001b[39m0\u001b[39m], Box(obs[\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mlow[\u001b[39m0\u001b[39m], obs[\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mhigh[\u001b[39m0\u001b[39m], shape\u001b[39m=\u001b[39m(\u001b[39m1\u001b[39m,),\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000005?line=33'>34</a>\u001b[0m                                                            dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mint64), obs[\u001b[39m2\u001b[39m])) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv\u001b[39m.\u001b[39mnumber_agents)}\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object is not callable"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "import tensorflow_probability as tfp\n",
-    "import tensorlayer as tl"
+    "ma_cartpole_cls = make_multi_agent(\"CartPole-v0\")\n",
+    "ma_cartpole = ma_cartpole_cls(config={\"num_agents\": 2})"
    ]
   }
  ],
