--- a/RL_with_gym_1.ipynb
+++ b/RL_with_gym_1.ipynb
@@ -2,15 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
-    "# OpenAI - Gym API 指南\n",
-    "*from Gym Documentation*"
+    "# OpenAI - Gym 指南"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 初始化环境\n",
     "首先需要安装 gym package，可以通过 pip 或者 conda 等完成。"
@@ -18,36 +25,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: gym in d:\\programs\\anaconda\\lib\\site-packages (0.21.0)\n",
-      "Requirement already satisfied: cloudpickle>=1.2.0 in d:\\programs\\anaconda\\lib\\site-packages (from gym) (2.0.0)\n",
-      "Requirement already satisfied: numpy>=1.18.0 in d:\\programs\\anaconda\\lib\\site-packages (from gym) (1.21.5)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "%pip install gym"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "调用gym.make()函数，传入一个现存的环境名，可以返回一个该环境的实例。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -59,8 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def make_multi_agent(env_name_or_creator):\n",
@@ -122,17 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Box([-4.8000002e+00 -3.4028235e+38 -4.1887903e-01 -3.4028235e+38], [4.8000002e+00 3.4028235e+38 4.1887903e-01 3.4028235e+38], (4,), float32)\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "env = gym.make(\"CartPole-v0\")\n",
     "obs = env.observation_space\n",
@@ -141,25 +148,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "env.reset()\n",
+    "env.step(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(100):\n",
+    "    if done == \n",
+    "    env.step(0)\n",
+    "    print(obs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "## MountainCar example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "1. **首先查看观测空间和动作空间**  \n",
+    "Box 代表连续空间，观测空间为浮点型的二维np.array。  \n",
+    "Discrete 代表离散空间，动作空间为（0.1.2）的整型数值。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'str' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\Documents\\Coding\\RL_with_gym_1.ipynb Cell 8'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000007?line=0'>1</a>\u001b[0m ma_cartpole_cls \u001b[39m=\u001b[39m make_multi_agent(\u001b[39m\"\u001b[39m\u001b[39mCartPole-v0\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000007?line=1'>2</a>\u001b[0m ma_cartpole \u001b[39m=\u001b[39m ma_cartpole_cls(config\u001b[39m=\u001b[39;49m{\u001b[39m\"\u001b[39;49m\u001b[39mnum_agents\u001b[39;49m\u001b[39m\"\u001b[39;49m: \u001b[39m2\u001b[39;49m})\n",
-      "\u001b[1;32md:\\Documents\\Coding\\RL_with_gym_1.ipynb Cell 6'\u001b[0m in \u001b[0;36mmake_multi_agent.<locals>.MultiEnv.__init__\u001b[1;34m(self, config)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000005?line=28'>29</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, config):\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000005?line=29'>30</a>\u001b[0m     \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000005?line=30'>31</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv \u001b[39m=\u001b[39m env_name_or_creator(config)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000005?line=31'>32</a>\u001b[0m     obs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv\u001b[39m.\u001b[39mobservation_space\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000005?line=32'>33</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobservation_space \u001b[39m=\u001b[39m {i: spaces\u001b[39m.\u001b[39mTuple((obs[\u001b[39m0\u001b[39m], Box(obs[\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mlow[\u001b[39m0\u001b[39m], obs[\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mhigh[\u001b[39m0\u001b[39m], shape\u001b[39m=\u001b[39m(\u001b[39m1\u001b[39m,),\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Coding/RL_with_gym_1.ipynb#ch0000005?line=33'>34</a>\u001b[0m                                                            dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mint64), obs[\u001b[39m2\u001b[39m])) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv\u001b[39m.\u001b[39mnumber_agents)}\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'str' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "观测空间 = Box([-1.2  -0.07], [0.6  0.07], (2,), float32)\n",
+      "动作空间 = Discrete(3)\n",
+      "观测范围 = [-1.2  -0.07] ~ [0.6  0.07]\n",
+      "动作数 = 3\n"
      ]
     }
    ],
    "source": [
-    "ma_cartpole_cls = make_multi_agent(\"CartPole-v0\")\n",
-    "ma_cartpole = ma_cartpole_cls(config={\"num_agents\": 2})"
+    "import gym\n",
+    "env = gym.make('MountainCar-v0')\n",
+    "print('观测空间 = {}'.format(env.observation_space))\n",
+    "print('动作空间 = {}'.format(env.action_space))\n",
+    "print('观测范围 = {} ~ {}'.format(env.observation_space.low,\n",
+    "        env.observation_space.high))\n",
+    "print('动作数 = {}'.format(env.action_space.n))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "2. **接下来实现一个智能体类 - BespokeAgent类**  \n",
+    "智能体往往都是我们自己实现的。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class BespokeAgent:\n",
+    "    def __init__(self, env):\n",
+    "        pass\n",
+    "    \n",
+    "    def decide(self, observation): # 决策\n",
+    "        position, velocity = observation\n",
+    "        lb = min(-0.09 * (position + 0.25) ** 2 + 0.03,\n",
+    "                0.3 * (position + 0.9) ** 4 - 0.008)\n",
+    "        ub = -0.07 * (position + 0.38) ** 2 + 0.07\n",
+    "        if lb < velocity < ub:\n",
+    "            action = 2\n",
+    "        else:\n",
+    "            action = 0\n",
+    "        return action # 返回动作\n",
+    "\n",
+    "    def learn(self, *args): # 学习\n",
+    "        pass\n",
+    "    \n",
+    "agent = BespokeAgent(env)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def play_montecarlo(env, agent, render=False, train=False):\n",
+    "    episode_reward = 0. # 记录回合总奖励，初始化为0\n",
+    "    observation = env.reset() # 重置游戏环境，开始新回合\n",
+    "    while True: # 不断循环，直到回合结束\n",
+    "        if render: # 判断是否显示\n",
+    "            env.render() # 显示图形界面，图形界面可以用 env.close() 语句关闭\n",
+    "        action = agent.decide(observation)\n",
+    "        next_observation, reward, done, _ = env.step(action) # 执行动作\n",
+    "        episode_reward += reward # 收集回合奖励\n",
+    "        if train: # 判断是否训练智能体\n",
+    "            agent.learn(observation, action, reward, done) # 学习\n",
+    "        if done: # 回合结束，跳出循环\n",
+    "            break\n",
+    "        observation = next_observation\n",
+    "    return episode_reward # 返回回合总奖励\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%pip install pyglet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "回合奖励 = -105.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "env.seed(0) # 设置随机数种子,只是为了让结果可以精确复现,一般情况下可删去\n",
+    "episode_reward = play_montecarlo(env, agent, render=True)\n",
+    "print('回合奖励 = {}'.format(episode_reward))\n",
+    "env.close() # 此语句可关闭图形界面\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%pip install numpy\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "episode_rewards = [play_montecarlo(env, agent) for _ in range(100)]\n",
+    "print('平均回合奖励 = {}'.format(np.mean(episode_rewards)))\n"
    ]
   }
  ],
