--- a/playground.ipynb
+++ b/playground.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -23,7 +27,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -42,7 +50,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -70,7 +82,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -88,7 +104,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -117,7 +137,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
@@ -143,7 +167,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -165,7 +193,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -186,6 +218,228 @@
     "print('观测范围 = {} ~ {}'.format(env.observation_space.low,\n",
     "        env.observation_space.high))\n",
     "print('动作数 = {}'.format(env.action_space.n))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "actions = np.zeros([10,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "possible_rewards = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: -1, 1: -2, 2: -2, 3: -3, 4: -1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "actions = [0, 1, 2, 3, 4]\n",
+    "rewards = [-1, -2, -2, -3, -1]\n",
+    "tmp = [(actions[i], rewards[i]) for i in range(len(actions))]\n",
+    "possible_rewards = dict(tmp)\n",
+    "print(possible_rewards)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: -1, 1: -2, 2: -2, 3: -3, 4: -1}\n",
+      "[(0, -1), (4, -1), (1, -2), (2, -2), (3, -3)]\n",
+      "-1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = sorted(possible_rewards.items(), key=lambda item:item[1], reverse=True)\n",
+    "print(possible_rewards)\n",
+    "print(s)\n",
+    "best_reward = s[0][1]\n",
+    "best_action = s[0][0]\n",
+    "print(best_reward)\n",
+    "print(best_action)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: -1, 1: -2, 2: -2, 3: -3, 4: -1, 5: 0}\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "possible_rewards[5] = 0\n",
+    "print(possible_rewards)\n",
+    "print(best_action)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5]\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "action_list = list(possible_rewards.keys())\n",
+    "print(action_list)\n",
+    "if len(action_list) == 6:\n",
+    "    while action in action_list:\n",
+    "        a = action_list.append(7)\n",
+    "        print(a)\n",
+    "        action = np.random.choice(a)\n",
+    "        print(\"can not use\")\n",
+    "    print(action)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 3\n",
+    "d = 2\n",
+    "print(d ** n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_pairs(n):\n",
+    "    results = []\n",
+    "    for i in range(n):\n",
+    "        j = i+1\n",
+    "        res = (i, j)\n",
+    "        results.append(res)\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pairs = get_pairs(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 1, 1: 2, 2: 3, 3: 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = dict(pairs)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 1, 1: 2, 2: 3, 3: 4, '([0, 1], [2, 3])': ([4, 5], [6, 7])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = {str(([0,1],[2,3])):([4,5],[6,7])}\n",
+    "a.update(p)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'([0, 1], [2, 5])'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32md:\\Documents\\pythonProjects\\playground.ipynb Cell 20\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/pythonProjects/playground.ipynb#ch0000019?line=1'>2</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mstr\u001b[39m(b) \u001b[39min\u001b[39;00m a:\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/pythonProjects/playground.ipynb#ch0000019?line=2'>3</a>\u001b[0m     \u001b[39mprint\u001b[39m(a[\u001b[39mstr\u001b[39m(b)])\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/pythonProjects/playground.ipynb#ch0000019?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(a[\u001b[39mstr\u001b[39;49m(b)])\n",
+      "\u001b[1;31mKeyError\u001b[0m: '([0, 1], [2, 5])'"
+     ]
+    }
+   ],
+   "source": [
+    "b = ([0,1],[2,5])\n",
+    "if str(b) in a:\n",
+    "    print(a[str(b)])\n",
+    "print(a[str(b)])"
    ]
   }
  ],
